objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Attribute_1__c</fullName>
        <label>Conferencing</label>
        <picklist>
            <picklistValues>
                <fullName>Conference Room-in-a-Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Projectors</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Attribute_2__c</fullName>
        <label>Portable Audio</label>
        <picklist>
            <picklistValues>
                <fullName>Headphones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop Audio</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Attribute_3__c</fullName>
        <label>Home Audio</label>
        <picklist>
            <picklistValues>
                <fullName>Speakers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Room Audio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Theatre</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_Name__c</fullName>
        <label>Old Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>43</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ID_for_Org_Customizer__c</fullName>
        <formula>RIGHT(purl__c , 15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID for Org Customizer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Additional_Details__c</fullName>
        <description>Used in the custom Catalog UI found in the Order Console.</description>
        <label>Additional Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Item_Features__c</fullName>
        <description>Used in the custom Catalog UI found in the Order Console.</description>
        <label>Features</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Item_Image_Large__c</fullName>
        <label>Item Image Large</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Image__c</fullName>
        <label>Item Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Long_Description__c</fullName>
        <label>Item Long Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Item_MSRP__c</fullName>
        <label>Item MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Short_Description__c</fullName>
        <label>Item Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Specifications__c</fullName>
        <description>Used in the custom Catalog UI found in the Order Console.</description>
        <label>Specifications</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Product Model</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductImageRelatedList__c</fullName>
        <formula>IMAGE(purl__c , &quot;No Image&quot;, 50, 85)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Catalog__c</fullName>
        <label>Product Group</label>
        <picklist>
            <picklistValues>
                <fullName>Consumer Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Image__c</fullName>
        <formula>IMAGE(purl__c , &quot;No Image&quot;, 300, 512)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Uses Product_Image_URL__c to reference the image stored in the Documents Tab. Image is 300px height by 512px width</inlineHelpText>
        <label>Product Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_com_ID__c</fullName>
        <label>Site.com ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published to Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>purl__c</fullName>
        <formula>if((Image__c != &apos;&apos; || Image__c != null),LEFT($Api.Enterprise_Server_URL_290, FIND( &quot;/services&quot;, $Api.Enterprise_Server_URL_290) -1) + &apos;/servlet/servlet.FileDownload?file=&apos; + Image__c,LEFT($Api.Enterprise_Server_URL_290, FIND( &quot;/services&quot;, $Api.Enterprise_Server_URL_290) -1) + &apos;/resource/no_product_image&apos;)</formula>
        <label>purl</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>ProductImageRelatedList__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Product_Family_Service</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>ProductImageRelatedList__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Service</value>
        </filters>
        <label>Product Family &quot;Service&quot;</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Products_Product_Family</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>ProductImageRelatedList__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Product</value>
        </filters>
        <label>Product Family &quot;Products&quot;</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Catalog_Products</fullName>
        <active>true</active>
        <description>This record type displays attributes that are specific to the custom Catalog found in the Order Console.</description>
        <label>Catalog Products</label>
    </recordTypes>
    <recordTypes>
        <fullName>Products</fullName>
        <active>true</active>
        <label>Products</label>
    </recordTypes>
</CustomObject>